--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,13 @@
 <div class="out">
 
 		//= partials/header.html
-		//= partials/pagination.html
-		//= partials/personality.html
-		//= partials/course.html
+		//= partials/top.html
+		//= partials/course_main.html
+		//= partials/coaches_main.html
+		//= partials/testimonial.html
+		//= partials/partners.html
 		//= partials/contacts.html
-
+		//= partials/popup.html
 </div>
 <!-- END out-->
 </body>
