--- a/site/about.html
+++ b/site/about.html
@@ -10,6 +10,8 @@
 	<!-- <meta name="viewport" content="width=1200"> -->
 	<!-- <meta name="viewport" content="initial-scale=1, user-scalable=no"> -->
 	<link rel="stylesheet" media="all" href="css/screen.css" >
+	<link rel="icon" type="image/vnd.microsoft.icon" href="/img/fav.ico">
+	<link rel="shortcut icon"  type="image/png" href="/img/fav.ico" />
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 	<script src="js/app.js"></script>
 </head>
@@ -29,9 +31,9 @@
 					</div>
 					<div class="heeder__nav">
 						<ul class="nav">
-							<li class="nav__item"><a href="#">О ШКОЛЕ</a></li>
-							<li class="nav__item"><a href="#">ПРОГРАММЫ</a></li>
-							<li class="nav__item"><a href="#">ТРЕНЕРЫ</a></li>
+							<li class="nav__item"><a href="/about.html">О ШКОЛЕ</a></li>
+							<li class="nav__item"><a href="/courses.html">ПРОГРАММЫ</a></li>
+							<li class="nav__item"><a href="/coaches.html">ТРЕНЕРЫ</a></li>
 							<li class="nav__item"><a href="#contacts" >КОНТАКТЫ</a></li>
 						</ul>
 					</div>
@@ -65,18 +67,21 @@
 			</div>
 			<div class="about__more__inner l">
 				<div class="photo l-col12">
-					<img src="http://lorempixel.com/460/500/abstract/">
+					<img src="img/about.png">	
 				</div>
 				<div class="description__out l-col13">
 					<div class="about__more__speach">
-						<p>TARGENTA – это школа интегрированных коммуникаций для тех, кто стремится к новым знаниям и постоянному самосовершенствованию: практиков коммуникационной индустрии, топ-менеджеров компаний, специалистов смежных дисциплин.</p>
-						<p>Школа создана известными украинскими профессионалами в сфере коммуникаций с опытом работы в корпоративном секторе и сетевых коммуникационных агентствах (биография основателя Школы и тренеры). Мы понимаем анатомию коммуникаций, дорожим своей репутацией и хотим делиться с вами накопленным опытом.</p>
-						<p>Школа предлагает 2 типа программ:</p>
+						<div class="cov">
+		
+							<p>TARGENTA – это школа интегрированных коммуникаций для тех, кто стремится к новым знаниям и постоянному самосовершенствованию: практиков коммуникационной индустрии, топ-менеджеров компаний, специалистов смежных дисциплин.</p>
+							<p>Школа создана известными украинскими профессионалами в сфере коммуникаций с опытом работы в корпоративном секторе и сетевых коммуникационных агентствах (биография основателя Школы и тренеры). Мы понимаем анатомию коммуникаций, дорожим своей репутацией и хотим делиться с вами накопленным опытом.</p>
+							<p>Школа предлагает 2 типа программ:</p>
+						</div>
 						<div class="divframe">
-							<p class="divframe__inner"><span class="blue">Основной курс:</span> программы в сфере коммуникаций продолжительностью до 2 месяцев. Цель  курса — дать студенту глубинное понимание выбранной темы, научить мыслить системно и ориентироваться на рынке. 
-							</p>
-							<p class="divframe__inner"><span class="blue">Интенсивы:</span> программы продолжительностью от 1 до 7 дней по наиболее актуальным темам в сфере коммуникаций, рассчитанные на изучение конкретных тем в максимально сжатом формате. Цель — вдохновить студентов и ознакомить их с инструментарием. 
-							</p>
+							<div class="divfram	e__inner"><span class="blue"><p>Основной курс:</p></span> <p>программы в сфере коммуникаций продолжительностью до 2 месяцев. Цель  курса — дать студенту глубинное понимание выбранной темы, научить мыслить системно и ориентироваться на рынке. </p>
+							</div>
+							<div class="divframe__inner"><span class="blue"><p>Интенсивы:</p></span> <p>программы продолжительностью от 1 до 7 дней по наиболее актуальным темам в сфере коммуникаций, рассчитанные на изучение конкретных тем в максимально сжатом формате. Цель — вдохновить студентов и ознакомить их с инструментарием. 
+							</div>
 						</div>
 						<button>
 							<a href="/" id="ord_about">
