--- a/site/courses.html
+++ b/site/courses.html
@@ -10,6 +10,8 @@
 	<!-- <meta name="viewport" content="width=1200"> -->
 	<!-- <meta name="viewport" content="initial-scale=1, user-scalable=no"> -->
 	<link rel="stylesheet" media="all" href="css/screen.css" >
+	<link rel="icon" type="image/vnd.microsoft.icon" href="/img/fav.ico">
+	<link rel="shortcut icon"  type="image/png" href="/img/fav.ico" />
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 	<script src="js/app.js"></script>
 </head>
@@ -29,9 +31,9 @@
 					</div>
 					<div class="heeder__nav">
 						<ul class="nav">
-							<li class="nav__item"><a href="#">О ШКОЛЕ</a></li>
-							<li class="nav__item"><a href="#">ПРОГРАММЫ</a></li>
-							<li class="nav__item"><a href="#">ТРЕНЕРЫ</a></li>
+							<li class="nav__item"><a href="/about.html">О ШКОЛЕ</a></li>
+							<li class="nav__item"><a href="/courses.html">ПРОГРАММЫ</a></li>
+							<li class="nav__item"><a href="/coaches.html">ТРЕНЕРЫ</a></li>
 							<li class="nav__item"><a href="#contacts" >КОНТАКТЫ</a></li>
 						</ul>
 					</div>
