--- a/src/about.html
+++ b/src/about.html
@@ -10,6 +10,8 @@
 	<!-- <meta name="viewport" content="width=1200"> -->
 	<!-- <meta name="viewport" content="initial-scale=1, user-scalable=no"> -->
 	<link rel="stylesheet" media="all" href="css/screen.css" >
+	<link rel="icon" type="image/vnd.microsoft.icon" href="/img/fav.ico">
+	<link rel="shortcut icon"  type="image/png" href="/img/fav.ico" />
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 	<script src="js/app.js"></script>
 </head>
