--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
 	<!-- <meta name="viewport" content="width=1200"> -->
 	<!-- <meta name="viewport" content="initial-scale=1, user-scalable=no"> -->
 	<link rel="stylesheet" media="all" href="css/screen.css" >
+	<link rel="icon" type="image/vnd.microsoft.icon" href="/img/fav.ico">
+	<link rel="shortcut icon" type="image/png" href="/img/fav.ico" />
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 	<script src="js/app.js"></script>
+	<script src="js/common.js"></script>
 </head>
 <body>
 <!-- BEGIN  out-->
@@ -23,6 +26,7 @@
 		//= partials/coaches_main.html
 		//= partials/testimonial.html
 		//= partials/partners.html
+		//= partials/about_index.html
 		//= partials/contacts.html
 		//= partials/popup.html
 </div>
