--- a/targenta_static/course_more.html
+++ b/targenta_static/course_more.html
@@ -10,7 +10,7 @@
 	<!-- <meta name="viewport" content="width=1200"> -->
 	<!-- <meta name="viewport" content="initial-scale=1, user-scalable=no"> -->
 	<link rel="stylesheet" media="all" href="css/font-awesome.min.css" >
-	<link rel="stylesheet" media="all" href="css/screen.css" >
+	<link rel="stylesheet" media="all" href="css/screen1.css" >
 	<link rel="icon" type="image/vnd.microsoft.icon" href="/img/fav.ico">
 	<link rel="shortcut icon"  type="image/png" href="/img/fav.ico" />
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
